# fktx

./: .gitmodules  CMakeLists.txt  README.md  config.yml
.github/workflows/: cmake.yml
src/: bot_manager.h  logger.h  main.cpp  utils.h
